--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ http_pool:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/abc?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=CTT
+    url: jdbc:mysql://192.168.50.5:3306/abc?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=CTT
     username: root
     password: 123456
 
