--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,13 @@
             <!--<version>5.3.3.RELEASE</version>-->
         <!--</dependency>-->
 
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.13.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
