--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
         <!--<artifactId>spring-security-test</artifactId>-->
         <!--<scope>test</scope>-->
         <!--</dependency>-->
+
+
+
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
@@ -176,7 +179,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.13.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
