--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,26 +5,55 @@ server:
 
 #\u6570\u636E\u5E93\u914D\u7F6E
 spring:
+#  datasource:
+
+#    type: com.alibaba.druid.pool.DruidDataSource
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/abc?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=CTT
-    username: root
-    password: 123456
+    dynamic:
+      primary: master #设置默认的数据源或者数据源组,默认值即为master
+      strict: true #设置严格模式,默认false不启动. 启动后在未匹配到指定数据源时候会抛出异常,不启动则使用默认数据源.
+      datasource:
+        master:
+          driver-class-name: com.mysql.jdbc.Driver
+          url: jdbc:mysql://localhost:3306/abc?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=CTT
+          username: root
+          password: 123456
+
 #  datasource:
 #    dynamic:
 #      primary: master #设置默认的数据源或者数据源组,默认值即为master
-#      strict: true #设置严格模式,默认false不启动. 启动后在未匹配到指定数据源时候会抛出异常,不启动则使用默认数据源.
+#      strict: false #设置严格模式,默认false不启动. 启动后在未匹配到指定数据源时候会抛出异常,不启动则使用默认数据源.
 #      datasource:
 #        master:
-#          url: jdbc:mysql://23.19.75.213:7001/kevin?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=CTT
+#          url: jdbc:mysql://localhost:7001/abc?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=CTT
 #          username: router
 #          password: O8ljzq7q
 #          driver-class-name: com.mysql.jdbc.Driver # 3.2.0开始支持SPI可省略此配置
 #        slave_1:
-#          url: jdbc:mysql://23.19.75.213:7002/kevin?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=CTT
+#          url: jdbc:mysql://localhost:7002/abc?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=CTT
 #          username: router
 #          password: O8ljzq7q
 #          driver-class-name: com.mysql.jdbc.Driver
+
+#    initialSize: 5
+#    minIdle: 5
+#    maxActive: 20
+#    maxWait: 60000
+#    timeBetweenEvictionRunsMillis: 60000
+#    minEvictableIdleTimeMillis: 300000
+#    validationQuery: SELECT 1 FROM DUAL
+#    testWhileIdle: true
+#    testOnBorrow: false
+#    testOnReturn: false
+#    poolPreparedStatements: true
+#
+#    #配置监控统计拦截的filters，stat:监控统计、log4j：日志记录、wall：防御sql注入
+#    #如果允许时报错  java.lang.ClassNotFoundException: org.apache.log4j.Priority
+#    #则导入 log4j 依赖即可，Maven 地址：https://mvnrepository.com/artifact/log4j/log4j
+#    filters: stat,wall,log4j
+#    maxPoolPreparedStatementPerConnectionSize: 20
+#    useGlobalDataSourceStat: true
+#    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
 #mybatis-plus\u914D\u7F6E
 mybatis-plus:
   # \u5982\u679C\u662F\u653E\u5728src/main/java\u76EE\u5F55\u4E0B classpath:/com/yourpackage/*/mapper/*Mapper.xml
